Add Capability.OBJECT_DEEP_EQUALS. Fix Features declarations